# sana

./: .drone.yml  Cargo.toml  DESIGN.md  README.md
.github/workflows/: rust.yml
examples/: Cargo.toml  README.md
examples/calc/: Cargo.toml  README.md
examples/calc/src/: lexer.rs  main.rs  parser.lalrpop  parser.rs
examples/json/: Cargo.toml  README.md  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: ir.rs  sql.rs
sana/: Cargo.toml
sana/benches/: bench.rs
sana/src/: lib.rs
sana/tests/: calc.rs  err_first_token.rs  error.rs  extended_re.rs  multiple_attrs.rs  negate.rs  priority.rs
sana_core/: Cargo.toml
sana_core/benches/: sql.rs
sana_core/src/: automata.rs  dot.rs  ir.rs  lib.rs  regex.rs
sana_core/tests/: doc.rs  logos.rs  regex_basic.rs
sana_derive/: Cargo.toml
sana_derive/src/: generator.rs  lib.rs  parser.rs
sana_derive/tests/: ui.rs
sana_derive/tests/ui/: fail-01-need-error-token.rs  fail-01-need-error-token.stderr  fail-02-only-one-error-token.rs  fail-02-only-one-error-token.stderr  fail-03-nullable-regex.rs  fail-03-nullable-regex.stderr  fail-04-ambiguity.rs  fail-04-ambiguity.stderr  fail-05-variants-with-fields.rs  fail-05-variants-with-fields.stderr  fail-06-derive-not-on-enum.rs  fail-06-derive-not-on-enum.stderr  fail-07-mix-err-attr.rs  fail-07-mix-err-attr.stderr
sana_test/: Cargo.toml
sana_test/src/: basic.rs  logos_basic.rs  main.rs  sql.rs
