[package]
name = "sana"
version = "0.1.0"
authors = ["Сухарик <65870+suhr@users.noreply.github.com>"]
license = "MIT"
description = "Create lexers easily"
keywords = ["lexer", "scanner", "tokenizer", "generator"]
categories = ["parsing", "text-processing"]
readme = "../README.md"
edition = "2018"

[[bench]]
name = "bench"
harness = false

[dependencies]
sana_core = { path = "../sana_core" }
sana_derive = { path = "../sana_derive" }

[dev-dependencies]
criterion = "0.3"
