[package]
name = "sana_core"
version = "0.1.0"
authors = ["Сухарик <65870+suhr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fnv = "1.0.3"
regex-syntax = "0.6"
utf8-ranges = "1.0"
dot = "0.1"
