[package]
name = "sana_core"
version = "0.1.0"
authors = ["Сухарик <65870+suhr@users.noreply.github.com>"]
license = "MIT"
description = "The core of Sana"
keywords = ["lexer", "scanner", "tokenizer", "generator"]
categories = ["parsing", "text-processing"]
repository = "https://github.com/suhr/sana/"
readme = "../README.md"
edition = "2018"

[lib]
bench = false

[features]
default = []

# Enable Graphviz DOT module for Automata
automata_dot = ["dot"]

[dependencies]
fnv = "1.0.3"
regex-syntax = "0.6"
utf8-ranges = "1.0"
dot = { version = "0.1", optional = true }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "sql"
harness = false
