[package]
name = "sana_derive"
version = "0.1.0"
authors = ["Сухарик <65870+suhr@users.noreply.github.com>"]
license = "MIT"
edition = "2018"

[lib]
name = "sana_derive"
proc-macro = true

[dependencies]
sana_core = { path = "../sana_core", version = "0.1" }

heck = "0.3"
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
regex-syntax = "0.6"
