[package]
name = "sana_test"
version = "0.1.0"
authors = ["Сухарик <65870+suhr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sana_core = { path = "../sana_core" }
sana_derive = { path = "../sana_derive" }
regex-syntax = "0.6"
dot = "0.1"
